--- a/provisions/templates/supervisord/magazine_bilna.ini
+++ b/provisions/templates/supervisord/magazine_bilna.ini
@@ -1,6 +1,6 @@
-[program:sellercenter]
+[program:magazine_bilna]
 command=/home/vagrant/.virtualenvs/moxy/bin/gunicorn wsgi.magazine_bilna:application -w 2 -b 127.0.0.1:8002
-directory=/vagrant/src/django/moxy
+directory=/vagrant/src/bilna-django/moxy
 user=vagrant
 autostart=true
 autorestart=true
